started journey for adding time and payment

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -52,6 +52,11 @@
                     <br><a href="v1-2/emails/to-LA-after-rejecting">Email to Local Authority to confirm their own rejection</a>
                       <br><a href="v1-2/emails/to-provider-after-rejected-from-LA">Email to provider to confirm rejection by Local Authority</a>
                         <br><a href="v1-2/emails/to-volunteer-certificate">Email to volunteer with their certificate</a></li>
+                <p></p>
+                <li>
+                  <a href="v1-2/emails/to-user-add_time">Email to user that placement has finished</a>
+                  <br><a href="v1-2/add_time/summary_empty">User adds time</a>
+
                 </ol>
 <br>
 <hr>
