--- a/app/views/index.html
+++ b/app/views/index.html
@@ -56,6 +56,10 @@
                 <li>
                   <a href="v1-2/emails/to-user-add_time">Email to user that placement has finished</a>
                   <br><a href="v1-2/add_time/summary_empty">User adds time</a>
+                  <br><a href="v1-2/emails/to-user-add_time">Email to user to check time is correct</a>
+                  <br><a href="v1-2/add_time/check-time">User checks time</a>
+
+
 
                 </ol>
 <br>
