--- a/app/views/v1-2/add_time/summary_two-added.html
+++ b/app/views/v1-2/add_time/summary_two-added.html
@@ -13,20 +13,26 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
+      <form class="form" action="summary_two-added" method="post">
+
       <h1 class="govuk-heading-xl">Tell us about the completed placement</h1>
 
-      <h2 class="govuk-heading-m">Time worked </h1>
       <dl class="govuk-summary-list">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             Week 1
           </dt>
           <dd class="govuk-summary-list__value">
-            No time added
+           Monday 5 hours
+           <br>Tuesday 5 hours
+           <br>Wednesday 5 hours
+           <br>Thursday 5 hours
+           <br>Friday 5 hours
+          
           </dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="week_one_add">
-              Add time<span class="govuk-visually-hidden"> name</span>
+              Change<span class="govuk-visually-hidden"> name</span>
             </a>
           </dd>
         </div>
@@ -35,17 +41,17 @@
             Week 2
           </dt>
           <dd class="govuk-summary-list__value">
-            No time added
+            Work happened during this week
           </dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="week_two_add">
-              Add time<span class="govuk-visually-hidden"> name</span>
+              Change<span class="govuk-visually-hidden"> name</span>
             </a>
           </dd>
         </div>    
       </dl>
 
-     <!--  <dl class="govuk-summary-list">
+      <!--  <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Bank details
@@ -64,7 +70,7 @@
 
 
 
-     <!--  <button class="govuk-button" data-module="govuk-button">Continue</button> --> 
+        <button class="govuk-button" data-module="govuk-button">Continue</button> 
 
       </form>
 
