registration work with confirmation pages and re wiring of employment questions

--- a/app/views/v1-2/emails/provider-add_time.html
+++ b/app/views/v1-2/emails/provider-add_time.html
@@ -25,13 +25,13 @@
 
       <p>"Dear [Named contact from here],</p>
       
-      <p>[Name of volunteer from here] has completed their [placement lenght] volunteer placement with you.</p>
+      <p>Our records show that [volunteer name]'s volunteer placement with you has now ended.</p>
       
-      <p>You need to provide us with information about the days worked during the placement.</p>
-      
-      <p>Once this is completed, the volunteer will be able to confirm this is information is correct and allow them to receive compensation, if they're eligible.</p>
+      <p>You need to provide us with information about how much time you volunteered during your placement.</p>
+     
+      <p>The volunteer may be entitled to income loss or expense compensation and can not claim until you have submitted this information.</p>
 
-      <p>Please review the application by clicking the link below:</p>
+      <p>Please follow the link to provide your information:</p>
       
       <p><a href="#">www.gov.uk/URL/displayed/here</a></p>
       
