--- a/app/views/v1-2/volunteer/employed-willyoubepaid.html
+++ b/app/views/v1-2/volunteer/employed-willyoubepaid.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="your-details">Back</a>
+  <a class="govuk-back-link" href="your-employment">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -22,26 +22,20 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What is your employement status?
+        Will you be paid by your employer during your volunteering placement?
       </h1>
     </legend>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="employed" name="employed-q" type="radio" value="your-employed-status" onclick="setLocation(this);">
+        <input class="govuk-radios__input" id="employed" name="employed" type="radio" value="location" onclick="setLocation(this);">
         <label class="govuk-label govuk-radios__label" for="employed">
-          Employed
+          Yes
         </label>
       </div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="self-employed" name="employed-q" type="radio" value="your-selfemployed-status" onclick="setLocation(this);">
+        <input class="govuk-radios__input" id="self-employed" name="self-employed" type="radio" value="location" onclick="setLocation(this);">
         <label class="govuk-label govuk-radios__label" for="self-employed">
-          Self employed
-        </label>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="unemployed" name="employed-q" type="radio" value="location" onclick="setLocation(this);">
-        <label class="govuk-label govuk-radios__label" for="unemployed">
-          Unemployed, retired or a student
+          No
         </label>
       </div>
       
