--- a/app/views/index.html
+++ b/app/views/index.html
@@ -36,9 +36,12 @@
             <br>
 
             <h2 class="govuk-heading-l">Full journey v1.2</h2>
-            <p>Last updated: Friday 17 April 2020</p>
+            <p>Last updated: Thursday 23 April 2020</p>
               <ol class="govuk-list govuk-list--number">
                 <li><p><a href="guidance/volunteer/guidance_apply">Volunteer applying for Emergency Volunteering Leave</a>
+                  <br><a href="v1-2/volunteer/confirmation-none">Confirmation page for no compensation</a>
+                  <br><a href="v1-2/volunteer/confirmation-ec">Confirmation page for expense compensation</a>
+                  <br><a href="v1-2/volunteer/confirmation-il">Confirmation page for income loss compensation</a>
                   <br><a href="v1-2/emails/to-provider">Email to provider with a link to approve volunteer information</a>
                 </li>
 
@@ -54,7 +57,7 @@
                         <br><a href="v1-2/emails/to-volunteer-certificate">Email to volunteer with their certificate</a></li>
                 <p></p>
                 <li>
-                  <a href="v1-2/emails/to-user-add_time">Email to user that placement has finished</a>
+                  <a href="v1-2/emails/provider-add_time">Email to care provider that placement has finished</a>
                   <br><a href="v1-2/add_time/summary_empty">User adds time</a>
                   <br><a href="v1-2/emails/to-user-add_time">Email to user to check time is correct</a>
                   <br><a href="v1-2/add_time/check-time">User checks time</a>
