--- a/app/views/v1-2/add_time/summary_two-added.html
+++ b/app/views/v1-2/add_time/summary_two-added.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="summary_two-added" method="post">
+      <form class="form" action="pay-details" method="post">
 
       <h1 class="govuk-heading-xl">Tell us about the completed placement</h1>
 
