--- a/app/views/v1-2/volunteer/confirmation-ec.html
+++ b/app/views/v1-2/volunteer/confirmation-ec.html
@@ -21,11 +21,14 @@
       </p> --> 
 
       <h2 class="govuk-heading-m">What happens next</h2>
-      <p>The contact for your placement will be emailed a link to verify your application. You may want to check they have received the email if you hope to start your placement within the next 7 days.</p>
+      <p>
+        The contact for your placement will be emailed a link to verify your application. You may want to check they have received the email if you hope to start your placement within the next 7 days.</p>
       <p>Your local authority or health authority will then approve the application, this is required for you to receive compensation.</p>
-      <p>We're currently working on Emergency Volunteering compensation ready for when you finish your placement.</p> 
-      <p>For future updates on compensation, check the <a href="https://www.gov.uk/guidance/guidance-on-the-emergency-volunteering-scheme">guidance on applying to the Emergency Volunteering Scheme</a>.</p>
-      
+    
+
+      <h2 class="govuk-heading-m">Compensation</h2>
+      <p>You will be eligible for a daily expense amount of £20.</p>
+      <p>We'll notify you once your contact for your placement has confirmed your volunteering hours.</p>
 
     </div>
   </div>
