--- a/app/views/v1-2/volunteer/your-selfemployed-status-UC.html
+++ b/app/views/v1-2/volunteer/your-selfemployed-status-UC.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="your-details">Back</a>
+  <a class="govuk-back-link" href="your-selfemployed-status">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -19,27 +19,27 @@
       
 
     <div class="govuk-form-group">
-  <fieldset class="govuk-fieldset">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+    <fieldset class="govuk-fieldset">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
       <h1 class="govuk-fieldset__heading">
-        What is your employement status?
+        Have you received Universal Credit?
       </h1>
     </legend>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="employed" name="employed-q" type="radio" value="your-employed-status" onclick="setLocation(this);">
+        <input class="govuk-radios__input" id="employed" name="employed" type="radio" value="employed-status" onclick="setLocation(this);">
         <label class="govuk-label govuk-radios__label" for="employed">
-          Employed
+          Yes
         </label>
       </div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="self-employed" name="employed-q" type="radio" value="your-selfemployed-status" onclick="setLocation(this);">
+        <input class="govuk-radios__input" id="self-employed" name="self-employed" type="radio" value="scotland" onclick="setLocation(this);">
         <label class="govuk-label govuk-radios__label" for="self-employed">
-          Self employed
+          No
         </label>
       </div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="unemployed" name="employed-q" type="radio" value="location" onclick="setLocation(this);">
+        <input class="govuk-radios__input" id="unemployed" name="unemployed" type="radio" value="wales" onclick="setLocation(this);">
         <label class="govuk-label govuk-radios__label" for="unemployed">
           Unemployed, retired or a student
         </label>
