content updates for 1.2 registration journey with new routing

--- a/app/views/v1-2/volunteer/your-employed-status.html
+++ b/app/views/v1-2/volunteer/your-employed-status.html
@@ -39,7 +39,7 @@
         </label>
       </div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="unemployed" name="unemployed" type="radio" value="employed-willyoubepaid-furlough" onclick="setLocation(this);">
+        <input class="govuk-radios__input" id="unemployed" name="unemployed" type="radio" value="employed-willyoubepaid" onclick="setLocation(this);">
         <label class="govuk-label govuk-radios__label" for="unemployed">
           I'm employed, but on furlough
         </label>
