--- a/app/views/v1-2/volunteer/employed-willyoubepaid.html
+++ b/app/views/v1-2/volunteer/employed-willyoubepaid.html
@@ -22,9 +22,11 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Will you be paid by your employer during your volunteering placement?
+        Will you receive income during your volunteering?
       </h1>
     </legend>
+    <span id="changed-name-hint" class="govuk-hint">
+      Confirm if you are going to receive income through the Coronavirus Job Retention Scheme (if you’re on furlough) or wages from your employer when you take Emergency Volunteering Leave.</span>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="employed" name="employed" type="radio" value="location" onclick="setLocation(this);">
@@ -33,7 +35,7 @@
         </label>
       </div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="self-employed" name="self-employed" type="radio" value="location" onclick="setLocation(this);">
+        <input class="govuk-radios__input" id="self-employed" name="employed" type="radio" value="location" onclick="setLocation(this);">
         <label class="govuk-label govuk-radios__label" for="self-employed">
           No
         </label>
@@ -41,6 +43,14 @@
       
     </div>
   </fieldset>
+</div>
+
+<div class="govuk-warning-text">
+  <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+  <strong class="govuk-warning-text__text">
+    <span class="govuk-warning-text__assistive">Warning</span>
+    You will sacrifice your income loss compensation through the Coronavirus Job Retention Scheme if you take Emergency Volunteering Leave.
+  </strong>
 </div>
 
         <button class="govuk-button" type=submit >Continue</button>
