--- a/app/views/v1-2/volunteer/your-selfemployed-status.html
+++ b/app/views/v1-2/volunteer/your-selfemployed-status.html
@@ -20,16 +20,19 @@
 
     <div class="govuk-form-group">
     <fieldset class="govuk-fieldset">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Are you currently working?
+        Has COVID-19 stopped you from working?
       </h1>
     </legend>
+    <span id="changed-name-hint" class="govuk-hint">
+      Confirm if your self-employment is affected by COVID-19.
+    </span>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="employed" name="employed" type="radio" value="location" onclick="setLocation(this);">
         <label class="govuk-label govuk-radios__label" for="employed">
-          Yes
+         Yes
         </label>
       </div>
       <div class="govuk-radios__item">
