flow for v1.2 compensation journey

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -61,7 +61,13 @@
                   <br><a href="v1-2/add_time/summary_empty">User adds time</a>
                   <br><a href="v1-2/emails/to-user-add_time">Email to user to check time is correct</a>
                   <br><a href="v1-2/add_time/check-time">User checks time</a>
-
+                </li>
+                <li>
+                  <a href="v1-2/emails/provider-add_time">Email to volunteer to check information</a>
+                  <br><a href="v1-2/volunteer/payment/check-info.html">Volunteer checks information</a>
+                  <br><a href="v1-2/emails/to-user-add_time">Email to user to check time is correct</a>
+                  <br><a href="v1-2/add_time/check-time">User checks time</a>
+                </li>
 
 
                 </ol>
