--- a/app/views/v1-2/volunteer/your-selfemployed-status-UC.html
+++ b/app/views/v1-2/volunteer/your-selfemployed-status-UC.html
@@ -38,7 +38,7 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="self-employed" name="self-employed" type="radio" value="location" onclick="setLocation(this);">
         <label class="govuk-label govuk-radios__label" for="self-employed">
-          The 80% government
+          Coronavirus Job Retention Scheme (on furlough)
         </label>
       </div>
       <div class="govuk-radios__item">
