going through Olivia's document and content sweeping. WIP.

--- a/app/views/v1-2/volunteer/payment/compensation-amount.html
+++ b/app/views/v1-2/volunteer/payment/compensation-amount.html
@@ -31,7 +31,7 @@
               <p>This amount will not be taxed.</p>
             </div>
           
-          <p>Confirm your bank details in the next step.</p>
+          <p>You can now confirm your bank details in the next step.          </p>
 
         </fieldset>
         <input type="hidden" name="answers-checked" value="true">
