--- a/app/views/v1-2/volunteer/payment/thank-you.html
+++ b/app/views/v1-2/volunteer/payment/thank-you.html
@@ -17,7 +17,7 @@
         <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
             <h1 class="govuk-fieldset__heading">
-             Thank you
+              Thank you for completing your volunteering placement
             </h1>
           </legend>
          
