--- a/app/views/index.html
+++ b/app/views/index.html
@@ -58,12 +58,14 @@
                 <p></p>
                 <li>
                   <a href="v1-2/emails/provider-add_time">Email to care provider that placement has finished</a>
-                  <br><a href="v1-2/add_time/summary_empty">User adds time</a>
+                  <br><a href="v1-2/provider/add_time/dashboard">Provider dashboard</a>
+                  <br><a href="v1-2/provider/add_time/ft-or-pt">Provider adds volunteering details</a>
                   <br><a href="v1-2/emails/to-user-add_time">Email to user to check time is correct</a>
                   <br><a href="v1-2/add_time/check-time">User checks time</a>
                 </li>
+                <p></p>
                 <li>
-                  <a href="v1-2/emails/provider-add_time">Email to volunteer to check information</a>
+                  <a href="v1-2/emails/volunteer-confirm-time">Email to volunteer to check information</a>
                   <br><a href="v1-2/volunteer/payment/check-info.html">Volunteer checks information</a>
                   <br><a href="v1-2/emails/to-user-add_time">Email to user to check time is correct</a>
                   <br><a href="v1-2/add_time/check-time">User checks time</a>
