--- a/app/views/guidance/volunteer/guidance_apply.html
+++ b/app/views/guidance/volunteer/guidance_apply.html
@@ -232,7 +232,7 @@
 
       {{ govukButton({
         text: "Start now",
-        href: "/v1-2/volunteer/start",
+        href: "/v1-2/volunteer/your-details",
         isStartButton: true
       }) }}
 
