--- a/app/views/v1-2/emails/volunteer-confirm-time.html
+++ b/app/views/v1-2/emails/volunteer-confirm-time.html
@@ -36,7 +36,7 @@
      
       <p>Login using the details which you used before to setup the account:
         <br>
-        <a href="#">www.gov.uk/URL/displayed/here</a></p>
+        <a href="/v1-2/volunteer/payment/check-info">www.gov.uk/URL/displayed/here</a></p>
       
       
           <br><p>Emergency Volunteering Scheme</p>
