--- a/app/views/index.html
+++ b/app/views/index.html
@@ -38,14 +38,17 @@
             <h2 class="govuk-heading-l">Full journey v1.2</h2>
             <p>Last updated: Thursday 23 April 2020</p>
               <ol class="govuk-list govuk-list--number">
-                <li><p><a href="guidance/volunteer/guidance_apply">Volunteer applying for Emergency Volunteering Leave</a>
+                <li><strong>Volunteer application</strong>
+                  <p><a href="guidance/volunteer/guidance_apply">Volunteer applying for Emergency Volunteering Leave</a>
                   <br><a href="v1-2/volunteer/confirmation-none">Confirmation page for no compensation</a>
                   <br><a href="v1-2/volunteer/confirmation-ec">Confirmation page for expense compensation</a>
                   <br><a href="v1-2/volunteer/confirmation-il">Confirmation page for income loss compensation</a>
                   <br><a href="v1-2/emails/to-provider">Email to provider with a link to approve volunteer information</a>
                 </li>
 
-                <li><a href="v1-2/provider/view-info-1">Provider checking volunteer information</a>
+                <li><strong>Care provider reviewing application</strong>
+                  <br><a href="v1-2/provider/create-account/email">Provider creating account (if the first time)</a>         
+                 <br><a href="v1-2/provider/view-info-1">Provider checking volunteer information</a>         
                 <br><a href="v1-2/emails/to-volunteer-rejected-by-provider.html">Email to volunteer they have been rejected by provider or Local Authority</a>
                 <br><a href="v1-2/emails/to-LA-to-approve">Email to Local Authority to approve volunteer and provider information </a></li>
                 <p></p>
