--- a/app/views/v1-2/emails/to-provider.html
+++ b/app/views/v1-2/emails/to-provider.html
@@ -21,21 +21,22 @@
       
 
 
-      <p><strong>Email title: Review a new Emergency Volunteering Scheme request</strong></p>
+      <p><strong>Email title: Review an Emergency Volunteer’s request to support your organisation      </strong></p>
 
-      <p>"Dear [Named contact from here],</p>
       
-      <p>[Name of volunteer from here] has provided your details to approve their application for the Emergency Volunteering Scheme. </p>
+      <p>Dave Marshall provided your details to approve their application for the Emergency Volunteering Scheme. </p>
       
-      <p>We expect that you have already agreed there is a suitable role for [Name of volunteer from here] within the organisation you work for before approving their application.</p>
+      <p>Before approving the volunteer’s application, we expect that you’ve already agreed there is a suitable role for Dave Marshall within your organisation.</p>
       
-      <p>Please review the application by clicking the link below:</p>
+      <p>You now need to create an account to manage applications for volunteer placements and to confirm the placement was completed.</p>
       
+      <p>If this is your first time using this service, you will be asked to create a password.</p>
+     
       <p><a href="#">www.gov.uk/URL/displayed/here</a></p>
       
-      <p>If you approve the application, you will need to tell us who the appropriate local authority or health authority is.
+      <p>If you approve the application, you will need to tell us who the relevant local authority or health authority is who can verify your organisation.  <p></p>
       
-          <br><p>Emergency Volunteering Scheme</p>
+        <p>Emergency Volunteering Scheme</p>
       
       
 
