--- a/app/views/index.html
+++ b/app/views/index.html
@@ -36,7 +36,7 @@
             <br>
 
             <h2 class="govuk-heading-l">Full journey v1.2</h2>
-            <p>Last updated: Thursday 23 April 2020</p>
+            <p>Last updated: Tuesday 28 April 2020</p>
               <ol class="govuk-list govuk-list--number">
                 <li><strong>Volunteer application</strong>
                   <p><a href="guidance/volunteer/guidance_apply">Volunteer applying for Emergency Volunteering Leave</a>
@@ -53,22 +53,25 @@
                 <br><a href="v1-2/emails/to-LA-to-approve">Email to Local Authority to approve volunteer and provider information </a></li>
                 <p></p>
 
-                <li><a href="v1-2/local-authority/view-info-1">Local authority approving volunteer and provider info</a>
+                <li><strong>Local authority reviewing application</strong>
+                  <br><a href="v1-2/local-authority/view-info-1">Local authority approving volunteer and provider info</a>
                   <br><a href="v1-2/emails/to-LA-after-approval">Email to Local Authority to confirm their own approval</a>
                     <br><a href="v1-2/emails/to-LA-after-rejecting">Email to Local Authority to confirm their own rejection</a>
                       <br><a href="v1-2/emails/to-provider-after-rejected-from-LA">Email to provider to confirm rejection by Local Authority</a>
                         <br><a href="v1-2/emails/to-volunteer-certificate">Email to volunteer with their certificate</a></li>
                 <p></p>
-                <li>
-                  <a href="v1-2/emails/provider-add_time">Email to care provider that placement has finished</a>
+                <li><strong>Placement finished - Provider adding information</strong>
+                  <br><a href="v1-2/emails/provider-add_time">Email to care provider that placement has finished</a>
                   <br><a href="v1-2/provider/add_time/dashboard">Provider dashboard</a>
                   <br><a href="v1-2/provider/add_time/ft-or-pt">Provider adds volunteering details</a>
                   <br><a href="v1-2/emails/to-user-add_time">Email to user to check time is correct</a>
                   <br><a href="v1-2/add_time/check-time">User checks time</a>
                 </li>
                 <p></p>
+
                 <li>
-                  <a href="v1-2/emails/volunteer-confirm-time">Email to volunteer to check information</a>
+                  <strong>Volunteer reviewing information</strong>
+                  <br><a href="v1-2/emails/volunteer-confirm-time">Email to volunteer to check information</a>
                   <br><a href="v1-2/volunteer/payment/check-info.html">Volunteer checks information</a>
                 </li>
 
